--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "string": "^3.3.1",
+    "extend": "^3.0.0",
     "fs-readdir-recursive": "^1.0.0"
   },
   "maintainers": [
